# Cazic

./:  .woodpecker.yml  .gitignore  .gitlab-ci.yml  .gitpod  .woodpecker.yml  COMMITS.md  Cargo.toml  Dockerfile  README.md  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.conf.json.artifact  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  woodpeaker.yml
 .woodpecker.yml/: main.yml
.github/workflows/: rust-tauri-ui-v2.yml  rust-tauri_fix-app-crash-when-discord-down.yml  rust-tauri_metadata.yml  rust-tauri_ui-v2.yml  rust.yml
Cazic-0.0.6/: .gitignore  Cargo.toml  README.md  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
Cazic-0.0.6/.github/workflows/: rust-tauri.yml
Cazic-0.0.6/src/: main.rs
Cazic-0.0.6/src_html/: style.css
Cazic-0.0.6/src_html/js/: audio.js  general.js
src/: depcheck.rs  discord_rpc.rs  lib.rs  main.rs
src_backend/: lib.rs  main.rs  mobile.rs  rpc.rs
src_frontend/: index.html
src_frontend/boxicons/css/: boxicons.min.css
src_frontend/css/: backend.css  bar.css  buttons.css  controls.css  main.css  metadata.css  pages.css  themes.css
src_frontend/css/ui/: icons.css
src_frontend/javascript/: discordRPC.js  eventListeners.js  fullscreen.js  main.js  pages.js  updateIcons.js
src_frontend/javascript/jsmediatags/: readTag.js  readtag.js
src_html/: audio.js  index.html  settings.html  style.css
src_html/JS/: audio.js
src_html/boxicons/: README
src_html/boxicons/css/: boxicons.min.css
src_html/css/: backend.css  controls.css  main.css
src_html/js/: Audio.js  Fullscreen.js  NavRedirect.js  Settings.js  audio.js  background.js  fullscreen.js  general.js  jsmediatags.min.js  webview.js  webview2.js
