[package]
name = "Cazic"
version = "0.0.7"
description = "Another music player created with Tauri!"
authors = ["Jaydon 'XDR' Nelson <xxdr@duck.com>", "WilliamAnimate"]
license = "MIT"
repository = "https://gitlab.com/XDRwastaken/Cazic"
edition = "2021"

[dependencies]
discord-rich-presence = { git = "https://github.com/sardonicism-04/discord-rich-presence.git" }
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git" }
tokio = { version = "1.37", features = ["full"] }
colored = "2.1.0"

[build-dependencies]
tauri-build = "1.5"

[dependencies.tauri]
version = "1.6"
features = ["system-tray", "wry"]
default-features = false

[[bin]]
name = "cazic"
path = "src_backend/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
