[package]
name = "cazic"
version = "0.0.7"
description = "Another music player created with Tauri!"
authors = ["Jaydon 'XDR' Nelson <xxdr@duck.com>", "WilliamAnimate"]
license = "MIT"
repository = "https://gitlab.com/XDRwastaken/Cazic"
edition = "2021"

[dependencies]
discord-rich-presence = { git = "https://github.com/sardonicism-04/discord-rich-presence.git" }
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git" }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
tauri-build = "1.5"

[dependencies.tauri]
version = "1.7"
features = ["system-tray", "wry"]
default-features = false

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "Cazic"
path = "src_backend/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
